app/src/ui/screens/SettingsScreen/SettingsScreen.css
.settings-dialog {
    @apply border border-1 border-surface-border p-0!;
    overflow-x: auto;
    scroll-snap-type: x mandatory;
    scroll-timeline: --mobile-settings-title;
    scroll-timeline-axis: inline;

    .dialog-close-btn {
        @apply left-2 top-2 elevation-2 absolute;
        animation: mobile-settings-close-btn linear;
        animation-timeline: --mobile-settings-title;
        animation-fill-mode: both;

        .icon {
            animation: mobile-settings-btn-icon-blur linear;
            animation-timeline: --mobile-settings-title;
            animation-fill-mode: both;
        }
    }

    .settings-tab-back-btn {
        @apply absolute left-2 top-2 rounded-full aspect-square h-11 w-11 p-0;
        z-index: 200;
        animation: mobile-settings-back-btn linear;
        animation-timeline: --mobile-settings-title;
        animation-fill-mode: both;
        left: calc(var(--spacing) * 2);
        opacity: 0;
        pointer-events: none;

        .icon {
            animation: mobile-settings-btn-icon-blur linear reverse;
            animation-timeline: --mobile-settings-title;
            animation-fill-mode: both;
        }
    }

    .dialog-title {
        @apply p-1 xs:mb-0 text-center fixed left-0 right-0;
        h1 {
            @apply mb-0 p-2 w-full text-3xl xs:p-4 xs:py-3;
        }

        animation: mobile-settings-title-fade-out linear;
        animation-timeline: --mobile-settings-title;
        animation-fill-mode: both;
    }

    @media (min-width: 768px) {
        @apply max-w-6xl;
        width: 100%;
        height: 80svh;
        max-height: 800px;

        overflow: hidden;
        scroll-snap-type: unset;
        scroll-timeline: unset;
        scroll-timeline-axis: unset;

        .dialog-title {
            @apply sr-only;
        }

        .settings-tab-back-btn {
            @apply hidden;
        }

        .dialog-close-btn {
            @apply size-8;
            animation: unset;
        }

        .settings-tab-back-btn .icon,
        .dialog-close-btn .icon {
            animation: unset;
        }
    }
}

@keyframes mobile-settings-close-btn {
    from {
        left: calc(var(--spacing) * 2);
        opacity: 1;
        pointer-events: auto;
    }

    to {
        left: calc(var(--spacing) * 2 + 100%);
        opacity: 0;
        pointer-events: none;
    }
}

@keyframes mobile-settings-back-btn {
    from {
        left: calc(var(--spacing) * 2);
        opacity: 0;
        pointer-events: none;
    }

    to {
        left: calc(var(--spacing) * 3 + 100%);
        opacity: 1;
        pointer-events: auto;
    }
}

@keyframes mobile-settings-btn-icon-blur {
    from {
        filter: blur(0px);
    }

    to {
        filter: blur(20px);
    }
}

@keyframes mobile-settings-title-fade-out {
    from {
        translate: 0 0;
        filter: blur(0px);
        opacity: 1;
    }

    to {
        translate: -50% 0;
        filter: blur(40px);
        opacity: 0;
    }
}

@keyframes mobile-settings-title-fade-in {
    from {
        translate: 50% 0;
        filter: blur(40px);
        opacity: 0;
    }

    to {
        translate: 0 0;
        filter: blur(0px);
        opacity: 1;
    }
}

@property --sync-indicator-angle {
    syntax: "<angle>";
    initial-value: 45deg;
    inherits: false;
}

.settings-screen {
    @apply h-full flex flex-col relative;
}

.settings-tabs {
    @apply flex-1 h-full;
    width: 100%;
    display: grid;
    grid-template-columns: 100% 100%;
    grid-template-rows: 1fr;

    @media (min-width: 768px) {
        @apply flex flex-row p-1 overflow-hidden;
    }
}

.settings-tab-list {
    @apply flex flex-col relative px-2 pt-16;
    width: 100%;
    scroll-snap-align: start;

    &::after {
        @apply bg-surface-level-2 rounded-xl block content-[""] absolute -z-1 inset-2 top-16 bottom-14;
    }

    @media (min-width: 768px) {
        @apply pt-14 pe-2 rounded-xl py-2 gap-2 surface-level-1 elevation-3 -me-1;
        width: fit-content;
        scroll-snap-align: unset;

        &::after {
            @apply hidden;
        }
    }
}

.settings-tab-list-item {
    @apply flex items-center py-4 px-2 w-full gap-2 rounded-xl;

    /* biome-ignore lint/style/noDescendingSpecificity: false positive? */
    .icon {
        @apply text-neutral;
    }

    &:hover {
        @apply bg-primary-light text-primary-contrast;

        .icon {
            @apply text-primary-contrast;
        }
    }

    &[aria-disabled="true"] {
        @apply hidden;
    }

    @media (min-width: 768px) {
        @apply py-2 px-3 py-1;
        &[aria-selected="true"] {
            @apply bg-primary text-primary-contrast;
            .icon {
                @apply text-primary-contrast;
            }
        }
    }
}

.settings-tab {
    @apply pt-2 pb-12 px-2 xs:px-4 flex-1 relative overflow-auto flex-1 rounded-xl mt-1 xs:mt-0 mx-2 xs:mx-0;
    width: 100%;
    scroll-snap-align: start;

    h2 {
        @apply text-center text-2xl font-semibold pb-2;
        animation: mobile-settings-title-fade-in linear;
        animation-timeline: --mobile-settings-title;
        animation-fill-mode: both;
    }

    .select-input {
        @apply bg-surface-level-2;

        &[data-pressed] {
            background-color: color-mix(
                in srgb,
                var(--color-surface-level-2) 97%,
                black
            );
        }
    }

    .input-field {
        @apply grid grid-cols-6 gap-y-2;

        label {
            @apply col-span-2 mb-0;
            place-items: center;
        }

        .input {
            @apply col-span-4;
        }

        .btn {
            @apply col-start-6;
        }

        @media (min-width: 768px) {
            label {
                @apply col-span-1;
            }

            .input {
                @apply col-span-5;
            }
        }
    }

    hr {
        @apply border-surface-border my-0.5 mx-4;
    }

    .checkbox-field {
        @apply w-full flex justify-between items-center p-2 gap-2;
    }

    @media (min-width: 768px) {
        @apply ps-4 p-2;
        scroll-snap-align: unset;
        width: auto;

        h2 {
            @apply text-left;
            animation: unset;
        }
    }
}

.settings-section {
    @apply bg-surface-level-2 rounded-xl p-2;
    margin-top: calc(var(--spacing) * 4);

    &:has(.settings-section-header) {
        margin-top: calc(1.5lh + var(--spacing) * 4);
    }
}

.settings-section-header {
    @apply flex gap-2 items-center w-full text-xl relative;
    top: -1.5lh;
    margin-bottom: -1lh;
}

.settings-disclosure-group {
    margin-top: calc(var(--spacing) * 4);

    &:has(.settings-section-header) {
        margin-top: calc(1.5lh + var(--spacing) * 4);
    }
}

.settings-disclosure-group-item {
    .settings-disclosure-group-toggle {
        @apply flex items-center gap-2;
        margin-bottom: -1lh;

        .icon {
            transition: transform 200ms;
        }

        &[aria-expanded="false"] {
            .icon {
                transform: rotate(-90deg);
            }
        }
    }

    .settings-disclosure-group-panel[inert] {
        @apply hidden;
    }
}

.api-tokens-list {
    @apply p-1 bg-surface-level-1 rounded-lg border border-surface-border relative;

    .api-token {
        @apply p-2 flex items-end justify-between gap-2 bg-surface-level-2 rounded-lg border border-surface-border mb-1 shadow-xs;
        &:hover {
            @apply shadow-md;
        }
    }

    .api-token-info {
        @apply flex-1;
    }

    .api-token-name {
        @apply block;
    }

    .api-token-expires-at,
    .api-token-created-at {
        @apply text-sm text-neutral-dark;
        span:first-child {
            @apply me-1;
        }
    }

    .api-token-created-at {
        &::before {
            @apply mx-1;
            display: inline;
            content: "•";
        }
    }
}

.theme-selection {
    @apply space-y-4;
}

.theme-selection-label {
    @apply flex mb-2 text-sm font-medium;
}

.theme-selection-items {
    @apply bg-surface-level-3 rounded-3xl p-1;
    @apply grid auto-cols-auto grid-flow-col gap-2 items-center justify-stretch w-full;
}

.theme-selection-item {
    @apply rounded-2xl relative;
    @apply flex gap-2 items-center justify-center p-1 text-sm;
    @apply text-neutral-extra-dark dark:text-neutral-extra-light;

    /* biome-ignore lint/style/noDescendingSpecificity: false positive? */
    .icon {
        transition: scale 150ms cubic-bezier(0.175, 0.885, 0.32, 2.2);
    }

    &:hover {
        @apply bg-surface-level-1;
        .icon {
            scale: 1.15;
        }
    }

    &[aria-checked="true"] {
        @apply bg-primary text-primary-contrast;
    }
}

.theme-mode-transition {
    view-transition-name: theme-mode-transition;
}

:root::view-transition-old(theme-mode-transition) {
    /* biome-ignore lint/complexity/noImportantStyles: must be overriden like this */
    display: block !important;
    pointer-events: none;
}

:root::view-transition-new(theme-mode-transition) {
    /* biome-ignore lint/complexity/noImportantStyles: must be overriden like this */
    animation: theme-mode-transition 500ms cubic-bezier(0.8, -0.4, 0.5, 1) !important;
    animation-delay: 10ms;
    pointer-events: none;
}

@keyframes theme-mode-transition {
    0% {
        clip-path: circle(0%);
        opacity: 0;
    }

    100% {
        clip-path: circle(100%);
        opacity: 1;
    }
}

